refactor: 💡 restructure css

--- a/src/user/FuckForm.scss
+++ b/src/user/FuckForm.scss
@@ -1,6 +1,5 @@
 .fuck-form {
   box-sizing: border-box;
-  padding: 20px;
   display: flex;
   flex-direction: column;
 
@@ -16,4 +15,5 @@
   height: 3rem;
   font-size: 20px;
   border-radius: 1rem;
+  cursor: pointer;
 }
