--- a/src/user/input/FuckFormInput.scss
+++ b/src/user/input/FuckFormInput.scss
@@ -50,7 +50,7 @@ $text-color: #333;
 }
 
 .fuck-form-input--error {
-  border-color: red;
+  box-shadow: 0 4px 8px rgba(255, 0, 51, 0.5);
 }
 
 .fuck-form__error-list {
